--- a/app/src/styles/Footer.css
+++ b/app/src/styles/Footer.css
@@ -29,7 +29,11 @@ gap: 1.25rem;
   height: 2rem;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 550px){
+  .footer{
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
   .logo{
     transform: translateX(-20px);
   }
